<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="apidez.com.week8.viewmodel.RegisterViewModel" />
        <variable name="viewModel" type="RegisterViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="apidez.com.week8.activity.RegisterActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:error="@{viewModel.emailError}"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                app:textChange="@{viewModel.emailChange}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:error="@{viewModel.passwordError}"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                app:textChange="@{viewModel.passwordChange}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:error="@{viewModel.confirmError}"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edtConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirmation"
                android:inputType="textPassword"
                app:textChange="@{viewModel.confirmChange}" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="@{viewModel.isValid}"
            android:padding="16dp"
            android:text="Register" />
    </LinearLayout>
</layout>
